log/build_2026-05-06_21-04-23/tensorrt_detect/stderr.log
CMake Deprecation Warning at /home/delphine/open3d-devel-linux-x86_64-cxx11-abi-cuda-0.19.0/lib/cmake/Open3D/Open3DConfig.cmake:18 (cmake_policy):
  The OLD behavior for policy CMP0072 will be removed from a future version
  of CMake.

  The cmake-policies(7) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack (most recent call first):
  CMakeLists.txt:29 (find_package)


/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp: In member function ‘void DetectNode::reloadROI(std_srvs::srv::Trigger_Request_<std::allocator<void> >::SharedPtr, std_srvs::srv::Trigger_Response_<std::allocator<void> >::SharedPtr)’:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:168:13: error: ‘YAML’ has not been declared
  168 |             YAML::Node cfg = YAML::LoadFile(model_yaml);
      |             ^~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:169:42: error: ‘cfg’ was not declared in this scope; did you mean ‘cfg_’?
  169 |             cfg_->model.outpostEnabled = cfg["outpost_enabled"]
      |                                          ^~~
      |                                          cfg_
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:170:73: error: expected primary-expression before ‘bool’
  170 |                                             ? cfg["outpost_enabled"].as<bool>()
      |                                                                         ^~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:170:73: error: expected ‘:’ before ‘bool’
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:170:73: error: expected primary-expression before ‘bool’
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:173:79: error: expected primary-expression before ‘>’ token
  173 |                 cfg_->model.outpostRoi = cfg["outpost_roi"].as<std::vector<int>>();
      |                                                                               ^~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:173:82: error: expected primary-expression before ‘)’ token
  173 |                 cfg_->model.outpostRoi = cfg["outpost_roi"].as<std::vector<int>>();
      |                                                                                  ^
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:176:89: error: expected primary-expression before ‘float’
  176 |                                                     ? cfg["outpost_score_threshold"].as<float>()
      |                                                                                         ^~~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:176:89: error: expected ‘:’ before ‘float’
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/detect_node.cpp:176:89: error: expected primary-expression before ‘float’
gmake[2]: *** [CMakeFiles/detect_node.dir/build.make:76: CMakeFiles/detect_node.dir/src/nodes/detect_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:207: CMakeFiles/detect_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
